--- a/LinguaLearn/src/index.html
+++ b/LinguaLearn/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <title>LinguaLearn</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -15,6 +18,8 @@
     />
   </head>
   <body>
-    <app-root></app-root>
+    <div class="wrapper">
+      <app-root></app-root>
+    </div>
   </body>
 </html>
